--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
     "bootstrap": "^5.3.0",
     "cdbreact": "^1.5.17",
     "firebase": "^9.22.1",
+    "jsonwebtoken": "^9.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.11"
